--- a/dkms/dkms.conf
+++ b/dkms/dkms.conf
@@ -1,5 +1,7 @@
 PACKAGE_NAME="bbswitch"
 PACKAGE_VERSION="REPLACE"
+MAKE[0]="make"
+CLEAN="make clean"
 BUILT_MODULE_NAME[0]="bbswitch"
-DEST_MODULE_LOCATION[0]="/kernel"
+DEST_MODULE_LOCATION[0]="/kernel/drivers/acpi"
 AUTOINSTALL="yes"
