--- a/dkms/dkms.conf
+++ b/dkms/dkms.conf
@@ -1,5 +1,5 @@
 PACKAGE_NAME="bbswitch"
-PACKAGE_VERSION="#MODULE_VERSION#"
+PACKAGE_VERSION="0.8.0"
 MAKE[0]="make KVERSION=$kernelver"
 CLEAN="make clean"
 BUILT_MODULE_NAME[0]="bbswitch"
